--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,7 +317,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/pokhara-bg.jpg") top right;
+  background: url("../img/hero-bg.jpg") top right;
   background-size: cover;
   position: relative;
 }
