--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -705,7 +705,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# My Services
+# Teaching
 --------------------------------------------------------------*/
 .services .icon-box {
   padding: 30px;
