--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -879,7 +879,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# My Portfolio
+# GEOLOGICAL FIELD WORK
 --------------------------------------------------------------*/
 .portfolio #portfolio-flters {
   list-style: none;
