--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -873,7 +873,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# GEOLOGICAL FIELD WORK
+# Geological Field Work
 --------------------------------------------------------------*/
 .portfolio #portfolio-flters {
   list-style: none;
