--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -765,7 +765,7 @@ section {
 --------------------------------------------------------------*/
 .testimonials {
   padding: 80px 0;
-  background: url("../img/pokhara-bg.jpg") no-repeat;
+  background: url("../img/pkr.jpg") no-repeat;
   background-position: center center;
   background-size: cover;
   position: relative;
