--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1296,7 +1296,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url("../img/Tribhuvan-University.jpg") top center no-repeat;
+  background: url("../img/Untitled-1kh.jpg") top center no-repeat;
   background-size: cover;
   color: #fff;
   font-size: 14px;
