--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,7 +602,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/Np.jpg") center center no-repeat;
+  background: url("../img/Npp.jpg") center center no-repeat;
   background-size: cover;
   min-height: 500px;
 }
